Update dependencies, autofocus input, show typed input in box

--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -8,7 +8,7 @@
         </div>
         <form class="text-input" autocomplete="off" ng-submit="submit()">
             <label for="text-enter"><pre>&gt; </pre></label>
-            <input id="text-enter" ng-model="input">
+            <input autofocus id="text-enter" ng-model="input">
         </form>
     </div>
 </div>
