Socket incorporated correctly - app should be started via node now

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,8 @@
   -->
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components/socket.io/lib/socket.js"></script>
+  <script src="bower_components/angular-socket-io/socket.js"></script>
+  <script src="/script/socket.io-client/dist/socket.io.js"></script>
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
   <script src="services/PlayerInfoService.js"></script>
