--- a/app/gameView/gameView.html
+++ b/app/gameView/gameView.html
@@ -7,8 +7,11 @@
     <div class="img-container">
         <img class="back-img" src="goya.jpg">
     </div>
+    <div class="side-bar" id="player-info">
+        Filler Name<br/>
+        HP: 10/10
+    </div>
     <div class="game-area">
-
         <div id="message-area" scroll-glue class="game-text">
             <p class="message" ng-repeat="msg in messages track by $index" ng-bind-html="asHtml(messages[$index])"></p>
         </div>
@@ -16,5 +19,8 @@
             <label for="text-enter"><pre>&gt; </pre></label>
             <input autofocus id="text-enter" ng-model="input">
         </form>
+    </div>
+    <div class="side-bar" id="room-info">
+        I'M IN YOUR A-RE-UH
     </div>
 </div>
